@@ -5,7 +5,8 @@ Changelog
 1.7.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add conditional import for Relationvalues since we don't always have z3c.relation.
+  [tschanzt]
 
 
 1.7.0 (2015-08-20)
